Kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myportfolio
  namespace: mynamespace
spec:
  selector:
    matchLabels:
      app: myportfolio
  template:
    metadata:
      labels:
        app: myportfolio
    spec:
      serviceAccountName: myportfolioservice
      containers:
      - name: myapp
        image: suryaprakashtiwarirj/my-portfolio:latest
        ports:
          - name: myport
            containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
