Kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myportfolio
  namespace: mynamespace
spec:
  selector:
    app: myportfolio
  ports:
  - port: 80           
    targetPort: myport  
  type: LoadBalancer
